# twinLab-client

./: .env.example  .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
assets/js/: 03d8e37f.1ca8ab7f.js  03d8e37f.8e70cc33.js  0e384e19.80c91329.js  1238ecd4.8dc747b8.js  14eb3368.fb2d7824.js  1548740c.d469ef58.js  1548740c.da9cb634.js  17896441.3352af09.js  1be78505.b28a6ee0.js  1df93b7f.29852f8c.js  1f391b9e.587a6617.js  2874a81a.c3a3a08f.js  2874a81a.c6d1ea1a.js  36ab9d62.223d2003.js  393be207.406d02a0.js  4b6cb0af.0af1832a.js  4b6cb0af.0eeb4283.js  666.7ba8b917.js  6a7a401b.3e07bbba.js  6cedb188.4cefa251.js  935f2afb.36bce906.js  935f2afb.d19d81bc.js  972.07f86f2b.js  a32b2cfc.e55d8f64.js  a6f3736a.ae939038.js  e513a298.8d4a7ac4.js  e513a298.b6b26a7a.js  f994e0fa.d99ae9ef.js  fed1e810.589f69fe.js  fed1e810.bf57c3f0.js  main.6930003e.js  (+3 more)
client/: __init__.py  client.py  utils.py
datasets/: generate_basic.py
docs/: docusaurus.config.js  package.json
markdown-page/: index.html
notebooks/: basic.ipynb  leaf_spring.ipynb  ukaea.ipynb
resources/: data.csv  samples.csv
scripts/: delete_campaign.py  delete_dataset.py  get_user.py  list_campaigns.py  list_datasets.py  new_campaign.py  predict_campaign.py  query_campaign.py  query_dataset.py  run.py  sample_campaign.py  sample_emulator.py  test.py  train_campaign.py  upload_big_dataset.py  upload_data.py  upload_dataset.py  upload_small_dataset.py  view_dataset.py
twinlab/: __init__.py  _version.py  api.py  client.py  settings.py  utils.py
twinlab_client/: __init__.py  campaign.py  client.py  settings.py  utils.py
(+69 files in other folders)
