[tool.poetry]
name = "digilab"
version = "0.0.0"
description = "Public digiLab API"
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
pandas = "^1.5.3"
pydantic = { version="^1.10.6", extras=["dotenv"] }
python = "^3.8"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
