[tool.poetry]
name = "client"
version = "0.1.0"
description = "Client interface for twinLab"
authors = ["Alexander Mead <alexander@digilab.co.uk>", "Freddy Wordingham <freddy@digilab.co.uk>"]
repository = "https://github.com/digiLab-ai/twinLab-cloud"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.5.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
IPython = "^8.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
